--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 /* Contenedor del formulario */
 .login-container {
-  background-color: #ffffff;
+  background-color: #ffffff
   padding: 2rem;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   border-radius: 16px;
