--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,14 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: white; /* Fondo blanco */
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
-    background-color: #0044cc; /* Color de fondo del menú */
-    padding: 10px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 100;
+    background-color: #004aad; /* Color azul más oscuro */
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-around;
+nav ul li a {
+    color: white;
+    font-size: 16px;
 }
 
 nav ul li {
@@ -38,9 +27,9 @@ main {
 }
 
 section {
-    padding: 20px;
+    padding: 40px 20px;
+    margin: 20px 0;
 }
-
 footer {
     background-color: #0044cc;
     color: white;
