--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,13 @@ section p {
   line-height: 1.6;
 }
 
+.footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.footer p {
+  margin: 0;
+}
