--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Tipografía general */
 body {
-  background-color: #f5f5f5;
+background-color: #ffcc00; /* color amarillo brillante */
   color: #333333;
   font-family: 'Roboto', sans-serif; /* Usa solo una fuente */
 }
