--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Tipografía general */
 body {
-background-color: #ffcc00; /* color amarillo brillante */
+background-color: #add8e6; /* Celeste */
   color: #333333;
   font-family: 'Roboto', sans-serif; /* Usa solo una fuente */
 }
