--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Tipografía general */
 body {
-background-color: #75AADB; /* Fondo celeste */
-            color: white; /* Texto blanco para contraste */
+background-color: white; /* Fondo blanco */
+            color: #003366; /* Texto azul oscuro */
   font-family: 'Roboto', sans-serif; /* Usa solo una fuente */
 }
 /* Estilos para h1 */
