--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 body {
 background-color: white; /* Fondo blanco */
     color: black; /* Texto negro */
-  font-family: 'Roboto', sans-serif; /* Usa solo una fuente */
+  font-family: Arial, sans-serif; /* Cambia a la fuente que prefieras */
+    font-size: 16px; /* Ajusta el tamaño de la fuente */
 }
 /* Estilos para h1 */
 h1 {
@@ -29,7 +30,7 @@ h1 {
 section {
   background-color: white;
   padding: 40px;
-  margin: 20px 0;
+   margin-bottom: 20px; /* Espacio entre secciones */
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 } 
