--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Tipografía general */
 body {
- background-color: #f0f0f0;
-    color: #333333;
+ background-color: #F5F5F5;
+    color:#4F4F4F;
   font-family: 'Roboto', sans-serif;
     font-size: 16px; /* Ajusta el tamaño de la fuente */
 }
