--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Tipografía general */
 body {
- background-color: #F5F5F5;
+ background-color: #333333;
     color:#4F4F4F;
   font-family: 'Roboto', sans-serif;
     font-size: 16px; /* Ajusta el tamaño de la fuente */
