--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Tipografía general */
 body {
- background-color: #333333;
+ background-color: #F5F5F5;
     color:#333333;
   font-family: 'Roboto', sans-serif;
     font-size: 16px; /* Ajusta el tamaño de la fuente */
@@ -10,7 +10,7 @@ h1 {
   .intro-text {
   text-align: center; /* Centra el texto */
   font-size: 1.2rem;  /* Ajusta el tamaño de la fuente */
-  color: #333;        /* Cambia el color si lo deseas */
+  color: #333333; /* Gris oscuro para buena legibilidad */
   margin-top: 20px;  /* Agrega un margen superior para separar del título */
   line-height: 1.5;   /* Espaciado entre líneas */
 }
@@ -176,16 +176,16 @@ os de la barra de navegación */
 }
 /* Botones */
 button, .btn {
-    background-color:#007BFF;
-    color: #007BFF;
+    background-color:#007BFF; /* Azul vibrante */
+    color: white; /* Texto blanco */
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+    padding: 10px 20px; /* Ajustar tamaño según necesidad */
+    border-radius: 5px; /* Un borde redondeado para estilo moderno */
+     text-decoration: none; /* Elimina el subrayado */
 }
 
 button:hover, a:hover {
-  background-color: #0056b3;
+  background-color:  #0056b3; /* Un azul más oscuro al hacer hover */
   transform: scale(1.05);
 }
 
