--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
  background-color: #F5F5F5;
     color:#333333;
-  font-family: 'Roboto', sans-serif;
+   font-family: 'Arial', sans-serif;
     font-size: 16px; /* Ajusta el tamaño de la fuente */
 }
 /* Estilos para h1 */
