--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Tipografía general */
 body {
- background-color: #F5F5F5;
-    color:#333333;
+    background-color: #f8f9fa; /* Fondo claro */
+    color: #343a40; /* Texto oscuro */
    font-family: 'Arial', sans-serif;
     font-size: 16px; /* Ajusta el tamaño de la fuente */
 }
@@ -19,7 +19,8 @@ h1 {
   margin: 0;
   font-size: 2.5rem;
 }
-
+h1, h2, h3 {
+    color: #007bff; /* Azul para encabezados */
 /* Contenedores y secciones */
 .container {
   max-width: 1200px;
